# Course-Work

./: CMakeLists.txt  GameGUI.py  main.py  visualization.py
src/game/: game.cpp  game.h
src/python/: game_module.cpp
